# boxworld_cpp

./: CMakeLists.txt  README.md  pyproject.toml
include/boxworld/: boxworld.h
problems/: test_100.txt
python/: pyboxworld.cpp
python/pyboxworld/: __init__.pyi
scripts/: generate_levelset.py
src/: boxworld_base.cpp  boxworld_base.h  definitions.h
test/: CMakeLists.txt  boxworld_test.cpp  test_serialize.cpp
